--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
 </head>
 <body>
 
-    <div class="container">
-        <h1 id="output"></h1>
+    <div class="container text-center my-4">
+        <h1>TreniBoolean</h1>
+        <p id="output"></p>
     </div>
 
 
